--- a/1.html
+++ b/1.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <title>WEB1-HTML</title>
+  <title>WEB1-HTML_KIMYG</title>
   <meta charset="utf-8">
 </head>
 <body>
