--- a/3.html
+++ b/3.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <title>WEB1-JavaScript</title>
+  <title>WEB1-JavaScript_KIMYG</title>
   <meta charset="utf-8">
 </head>
 <body>
