--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <title>WEB1-html</title>
+  <title>WEB1-WEB</title>
   <meta charset="utf-8">
 </head>
 <body>
@@ -10,6 +10,6 @@
     <li><a href="1.html">HTML</li>
     <li><a href="2.html">CSS</li>
     <li><a href="3.html">JavaScript</li>
-  </ol>      
+  </ol>
 </body>
 </html>
