--- a/3.html
+++ b/3.html
@@ -7,9 +7,9 @@
 <body>
   <h1><a href="index.html">WEB</a></h1>
   <ol>
-    <li><a href="1.html">HTML</a></li>
-    <li><a href="2.html">CSS</a></li>
-    <li><a href="3.html">JavaScript</a></li>
+    <li><a href="1.html">HTML_KIMYG</a></li>
+    <li><a href="2.html">CSS_KIMYG</a></li>
+    <li><a href="3.html">JavaScript_KIMYG</a></li>
   </ol>
   <h2>JavaScript</h2>
   <p>JavaScript (/ˈdʒɑːvəskrɪpt/),[10] often abbreviated JS, is a programming language that is one of the core technologies of the World Wide Web, alongside HTML and CSS.[11] Over 97% of websites use JavaScript on the client side for web page behavior,[12] often incorporating third-party libraries.[13] All major web browsers have a dedicated JavaScript engine to execute the code on users' devices.
