--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <h1><a href="index.html">WEB</a></h1>
   <ol>
     <li><a href="1.html">HTML_KIMYG</a></li>
-    <li><a href="2.html">CSS_KIMYG<a/></li>
+    <li><a href="2.html">CSS_KIMYG</a></li>
     <li><a href="3.html">JavaScript_KIMYG</a></li>
   </ol>
 </body>
