동영상 추가

--- a/index.html
+++ b/index.html
@@ -7,9 +7,16 @@
 <body>
   <h1><a href="index.html">WEB</a></h1>
   <ol>
-    <li><a href="1.html">HTML_KIMYG</a></li>
-    <li><a href="2.html">CSS_KIMYG</a></li>
-    <li><a href="3.html">JavaScript_KIMYG</a></li>
+    <li><a href="1.html">HTML</a></li>
+    <li><a href="2.html">CSS</a></li>
+    <li><a href="3.html">JavaScript</a></li>
   </ol>
+  <h2>HTML</h2>
+  <p>
+    <h3>
+       깨진 유리창의 법칙
+   </h3>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/VwOuqFpykQU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </p>
 </body>
 </html>
