--- a/1.html
+++ b/1.html
@@ -7,9 +7,9 @@
 <body>
   <h1><a href="index.html">WEB</a></h1>
   <ol>
-    <li><a href="1.html">HTML_KIMYG</a></li>
-    <li><a href="2.html">CSS_KIMYG</a></li>
-    <li><a href="3.html">JavaScript_KIMYG</a></li>
+    <li><a href="1.html">HTML</a></li>
+    <li><a href="2.html">CSS</a></li>
+    <li><a href="3.html">JavaScript</a></li>
   </ol>
   <h2>HTML</h2>
   <p>The HyperText Markup Language, or HTML is the standard markup language for documents designed to be displayed in a web browser. It can be assisted by technologies such as Cascading Style Sheets (CSS) and scripting languages such as JavaScript.
